docs/0.1.0/_sources/index.rst.txt
.. currentmodule:: unifhy
.. default-role:: obj

.. include:: ../../README.rst

.. _fig_diagram:
.. figure:: ../_doc_img/framework_diagram.svg
   :align: center
   :alt: modelling framework diagram

   Fig. 1: Diagram of the Modelling Framework Blueprint for `unifhy`.

.. add guides to sidebar

Documentation
-------------

The documentation features three guides for various target audiences:

.. toctree::
   :maxdepth: 2

   users

.. toctree::
   :maxdepth: 2

   contributors

.. toctree::
   :maxdepth: 2

   developers


The documentation lists the modelling components currently available
in the framework:

.. toctree::
   :maxdepth: 2

   science_library


The Application Programming Interface (API) for the framework is also
documented:

.. toctree::
   :maxdepth: 2

   api_reference

.. toctree::
   :maxdepth: 1

   changelog
   licence

.. add additional sections to sidebar

.. toctree::
   :hidden:
   :maxdepth: 1

   genindex

Acknowledgements
----------------

The development of this framework is funded by the NERC Hydro-JULES
programme (NE/S017380/1).
