docs/0.1.1/_sources/index.rst.txt
.. currentmodule:: unifhy
.. default-role:: obj

.. include:: ../../README.rst
   :end-before: .. end here for docs

.. _fig_diagram:
.. figure:: ../_doc_img/framework_diagram.svg
   :align: center
   :alt: modelling framework diagram

   Fig. 1: Diagram of the Modelling Framework Blueprint for `unifhy`.

.. add guides to sidebar

Getting started
---------------

.. panels::
   :card: + intro-card text-center
   :column: col-lg-4 col-md-6 col-sm-12 col-xs-12 p-2

   Learn how to get `unifhy`.

   +++

   .. link-button:: users/installation
      :type: ref
      :text: Installation
      :classes: btn-outline-primary btn-block stretched-link

   ---

   Learn how to use `unifhy`.

   +++

   .. link-button:: users/tutorial
      :type: ref
      :text: Tutorial
      :classes: btn-outline-primary btn-block stretched-link

   ---

   Contribute to `unifhy`.

   +++

   .. link-button:: contributors
      :type: ref
      :text: Contributor Guide
      :classes: btn-outline-primary btn-block stretched-link


Documentation
-------------

The documentation features three guides for various target audiences:

.. toctree::
   :maxdepth: 2

   users

.. toctree::
   :maxdepth: 2

   contributors

.. toctree::
   :maxdepth: 2

   developers


The documentation lists the modelling components currently available
in the framework:

.. toctree::
   :maxdepth: 2

   science_library


The Application Programming Interface (API) for the framework is also
documented:

.. toctree::
   :maxdepth: 2

   api_reference

.. toctree::
   :maxdepth: 1

   changelog
   licence

.. add additional sections to sidebar

.. toctree::
   :hidden:
   :maxdepth: 1

   genindex

Acknowledgements
----------------

The development of this framework is funded by the NERC Hydro-JULES
programme (NE/S017380/1).
